--- a/html.html
+++ b/html.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="html.html">HTML</a></li>
                         <li class="nav-item"><a class="nav-link" href="css.html">CSS</a></li>
                         <li class="nav-item"><a class="nav-link" href="javascript.html">JAVASCRIPT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="scripts.html">SCRIPTS</a></li>
                     </ul>
                 </div>
             </div>
@@ -508,6 +509,8 @@
                     <a class="link-light small" href="css.html">CSS</a>
                     <span class="text-white mx-1">&middot;</span>
                     <a class="link-light small" href="javascript.html">JavaScript</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="scripts.html">Scripts</a>
                 </div>
             </div>
         </div>
