--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                             <li class="nav-item"><a class="nav-link" href="html.html">HTML</a></li>
                             <li class="nav-item"><a class="nav-link" href="css.html">CSS</a></li>
                             <li class="nav-item"><a class="nav-link" href="javascript.html">JAVASCRIPT</a></li>
+                            <li class="nav-item"><a class="nav-link" href="scripts.html">SCRIPTS</a></li>
                         </ul>
                     </div>
                 </div>
@@ -89,20 +90,24 @@
                 </div>
             </section>
         </main>
-        <footer class="bg-dark py-4 mt-auto">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+         <footer class="bg-dark py-4 mt-auto">
+        <div class="container px-5">
+            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="col-auto">
                     <div class="small m-0 text-white">Copyright Adrian Website 2022</div>
-                    <div class="col-auto">
-                        <a class="link-light small" href="html.html">HTML</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="css.html">CSS</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="javascript.html">JavaScript</a>
-                    </div>
+                </div>
+                <div class="col-auto">
+                    <a class="link-light small" href="html.html">HTML</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="css.html">CSS</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="javascript.html">JavaScript</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="scripts.html">Scripts</a>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/scripts.js"></script>
     </body>
